[gd_scene load_steps=5 format=3 uid="uid://562jbpiw4i0l"]

[ext_resource type="Script" path="res://scripts/projectiles/projectile.gd" id="1_d1kp0"]
[ext_resource type="Texture2D" uid="uid://dexn65rp5ia5v" path="res://assets/kenney_simplified-platformer-pack/PNG/Tiles/platformPack_tile011.png" id="1_xsmjw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q5ns2"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b2mur"]
radius = 23.0

[node name="Projectile" type="CharacterBody2D"]
rotation = -6.28319
collision_layer = 32
collision_mask = 6
script = ExtResource("1_d1kp0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_xsmjw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q5ns2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_b2mur")

[node name="lifespan" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="slideTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="lifespan" to="." method="_on_lifespan_timeout"]
[connection signal="timeout" from="slideTimer" to="." method="_on_slide_timer_timeout"]
